# Labs

Laba1/templates/laba1/src/: text.tex
Laba2/templates/laba2/.build/: laba1.aux  pz.aux  pz1.out
Laba2/templates/laba2/src/: text.tex
Laba3/: Laba3.tex
Laba3/.build/: Laba3.aux
Laba3/LABA 3 programma/WpfApp1/WpfApp1/: MainWindow.xaml  MainWindow.xaml.cs  WpfApp1.csproj
Laba3/src/: text.tex
lab4/: lab.tex
lab4/LABA4 Программа/: main.qml  main.qmlc  p.py  script.bat
lab4/src/: text.tex
laba1/.build/: pz.aux  pz.toc
laba2/: Laba2.tex  calkul.py
laba5/: Laba5.tex
laba5/.build/: Laba5.aux
laba5/Laba 5 programma/L55/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h  CMakeSettings.json
laba5/src/: text.tex
